--- a/config/lio_sam_livox.yaml
+++ b/config/lio_sam_livox.yaml
@@ -39,7 +39,7 @@ liorf:
   imuAccBiasN: 6.4356659353532566e-04
   imuGyrBiasN: 3.5640318696367613e-04
   imuGravity: 9.81
-  imuRPYWeight: 0.01
+  imuRPYWeight: 0.1
 
   # Extrinsics: T_lb (lidar -> imu)
   extrinsicTrans: [0.011, 0.023, -0.044]
@@ -66,26 +66,30 @@ liorf:
   # Surrounding map
   surroundingkeyframeAddingDistThreshold: 0.5   # meters, regulate keyframe adding threshold
   surroundingkeyframeAddingAngleThreshold: 0.2  # radians, regulate keyframe adding threshold
-  surroundingKeyframeDensity: 2.0               # meters, downsample surrounding keyframe poses   
-  surroundingKeyframeSearchRadius: 50.0         # meters, within n meters scan-to-map optimization (when loop closure disabled)
+  surroundingKeyframeDensity: 1.0               # meters, downsample surrounding keyframe poses   
+  surroundingKeyframeSearchRadius: 60.0         # meters, within n meters scan-to-map optimization (when loop closure disabled)
   surroundingKeyframeMapLeafSize: 0.2           # downsample local map point cloud
 
   # Loop closure
   loopClosureEnableFlag: true
-  loopClosureFrequency: 1.0                     # Hz, regulate loop closure constraint add frequency
-  surroundingKeyframeSize: 50                   # submap size (when loop closure enabled)
-  historyKeyframeSearchRadius: 15.0             # meters, key frame that is within n meters from current pose will be considerd for loop closure
-  historyKeyframeSearchTimeDiff: 30.0           # seconds, key frame that is n seconds older will be considered for loop closure
-  historyKeyframeSearchNum: 25                  # number of hostory key frames will be fused into a submap for loop closure
-  loopClosureICPSurfLeafSize: 0.3               # downsample icp point cloud  
-  historyKeyframeFitnessScore: 0.3              # icp threshold, the smaller the better alignment
+  loopClosureFrequency: 2.0                     # Hz, regulate loop closure constraint add frequency
+  surroundingKeyframeSize: 60                   # submap size (when loop closure enabled)
+  historyKeyframeSearchRadius: 50.0             # meters, key frame that is within n meters from current pose will be considerd for loop closure
+  historyKeyframeSearchTimeDiff: 80.0           # seconds, key frame that is n seconds older will be considered for loop closure
+  historyKeyframeSearchNum: 80                  # number of hostory key frames will be fused into a submap for loop closure
+  loopClosureICPSurfLeafSize: 0.2               # downsample icp point cloud  
+  historyKeyframeFitnessScore: 0.2              # icp threshold, the smaller the better alignment
 
   # Visualization
   globalMapVisualizationSearchRadius: 1000.0    # meters, global map visualization radius
-  globalMapVisualizationPoseDensity: 10.0       # meters, global map visualization keyframe density
+  globalMapVisualizationPoseDensity: 3.0       # meters, global map visualization keyframe density
   globalMapVisualizationLeafSize: 0.5           # meters, global map visualization cloud density
 
-
+  # Custom params
+  mappingGpsDatumLatitude: 47.91871735340862
+  mappingGpsDatumLongitude: -97.09315428590746
+  mappingGpsDatumAltitude: 220.0
+  mappingGpsCloudTimeOffset: 3.0
 
 
 # Navsat (convert GPS coordinates to Cartesian)
