--- a/config/lio_sam_livox.yaml
+++ b/config/lio_sam_livox.yaml
@@ -15,8 +15,8 @@ liorf:
   # GPS Settings
   useImuHeadingInitialization: true           # if using GPS data, set to "true"
   useGpsElevation: true                      # if GPS elevation is bad, set to "false"
-  gpsCovThreshold: 0.01                        # m^2, threshold for using GPS data
-  poseCovThreshold: 0.01                      # m^2, threshold for using GPS data
+  gpsCovThreshold: 0.0002                        # m^2, threshold for using GPS data
+  poseCovThreshold: 0.000000000001                      # m^2, threshold for using GPS data
   
   # Export settings
   savePCD: true                              # https://github.com/TixiaoShan/LIO-SAM/issues/3
@@ -39,7 +39,7 @@ liorf:
   imuAccBiasN: 6.4356659353532566e-04
   imuGyrBiasN: 3.5640318696367613e-04
   imuGravity: 9.81
-  imuRPYWeight: 0.1
+  imuRPYWeight: 0.01
 
   # Extrinsics: T_lb (lidar -> imu)
   extrinsicTrans: [0.011, 0.023, -0.044]
@@ -53,7 +53,7 @@ liorf:
                  0, 0, 1]
 
   # voxel filter paprams
-  mappingSurfLeafSize: 0.2                     # default: 0.4 - outdoor, 0.2 - indoor
+  mappingSurfLeafSize: 0.15                     # default: 0.4 - outdoor, 0.2 - indoor
 
   # robot motion constraint (in case you are using a 2D robot)
   z_tollerance: 1000                            # meters
@@ -67,22 +67,22 @@ liorf:
   surroundingkeyframeAddingDistThreshold: 0.5   # meters, regulate keyframe adding threshold
   surroundingkeyframeAddingAngleThreshold: 0.2  # radians, regulate keyframe adding threshold
   surroundingKeyframeDensity: 1.0               # meters, downsample surrounding keyframe poses   
-  surroundingKeyframeSearchRadius: 60.0         # meters, within n meters scan-to-map optimization (when loop closure disabled)
-  surroundingKeyframeMapLeafSize: 0.2           # downsample local map point cloud
+  surroundingKeyframeSearchRadius: 40.0         # meters, within n meters scan-to-map optimization (when loop closure disabled)
+  surroundingKeyframeMapLeafSize: 0.15           # downsample local map point cloud
 
   # Loop closure
   loopClosureEnableFlag: true
-  loopClosureFrequency: 2.0                     # Hz, regulate loop closure constraint add frequency
-  surroundingKeyframeSize: 60                   # submap size (when loop closure enabled)
-  historyKeyframeSearchRadius: 50.0             # meters, key frame that is within n meters from current pose will be considerd for loop closure
-  historyKeyframeSearchTimeDiff: 80.0           # seconds, key frame that is n seconds older will be considered for loop closure
-  historyKeyframeSearchNum: 80                  # number of hostory key frames will be fused into a submap for loop closure
+  loopClosureFrequency: 0.2                     # Hz, regulate loop closure constraint add frequency
+  surroundingKeyframeSize: 80                   # submap size (when loop closure enabled)
+  historyKeyframeSearchRadius: 15.0             # meters, key frame that is within n meters from current pose will be considerd for loop closure
+  historyKeyframeSearchTimeDiff: 400.0           # seconds, key frame that is n seconds older will be considered for loop closure
+  historyKeyframeSearchNum: 40                  # number of hostory key frames will be fused into a submap for loop closure
   loopClosureICPSurfLeafSize: 0.2               # downsample icp point cloud  
   historyKeyframeFitnessScore: 0.2              # icp threshold, the smaller the better alignment
 
   # Visualization
   globalMapVisualizationSearchRadius: 1000.0    # meters, global map visualization radius
-  globalMapVisualizationPoseDensity: 3.0       # meters, global map visualization keyframe density
+  globalMapVisualizationPoseDensity: 1.0       # meters, global map visualization keyframe density
   globalMapVisualizationLeafSize: 0.5           # meters, global map visualization cloud density
 
   # Custom params
